Final updates to resume

--- a/resume/css/resume-ke.css
+++ b/resume/css/resume-ke.css
@@ -94,6 +94,7 @@ h3 {
 
 .aboutme-content h1 {
 	margin-bottom: 20px;
+	overflow: hidden;
 }
 
 .aboutme-content ul {
@@ -111,6 +112,14 @@ img {
 	margin-left: 40px;
 }
 
+.workstuff {
+	overflow: hidden;
+}
+
+.funstuff {
+	overflow: hidden;
+}
+
 
 /*resume layout*/
 
@@ -124,7 +133,7 @@ img {
 }
 
 .experience {
-	flex:1;
+	flex:3;
 }
 
 
@@ -135,7 +144,7 @@ img {
 
 .education {
 	margin-left: 40px;
-	flex: 1;
+	flex: 2;
 }
 
 .education ul{
