--- a/cookie-columns/css/cookie-columns.css
+++ b/cookie-columns/css/cookie-columns.css
@@ -1,24 +1,33 @@
+/*RESET*/
+*{
+	box-sizing: border-box;	
+	margin:0;
+}
+
 /*headers and font styling*/
 
-body {
-
-}
 
 h1 {
 	color: #B66848;
 	font-family: Arial;
-	font-weight: bold; 
+	font-weight: bolder; 
+	margin-bottom: 5px;
 }
 
 h2 {
 	color: #B66848;
 	font-size: 16px;
 	font-family: Arial;
-	font-weight: bold; 
-	margin-bottom: 5px;
+	font-weight: bolder; 
+	margin-bottom: 2px;
+	margin-top: 20px;
 }
 
-
+.author {
+	color: #93AC8F; 
+	font-size: 14px;
+	margin-bottom: 5px;
+}
 
 
 /*layout*/
@@ -26,8 +35,29 @@ main {
 	display: flex;
 }
 
+.image {
+		position: relative;
+}
+
 img {
 	width: 100%;
+
+}
+
+.i-icon {
+	position: relative;
+	color: #fff;
+	font-weight: bold;
+	font-size: 16px; 	border: solid 1px #FFF;
+	padding: 5px;
+	height: 40px;
+	width: 40px;
+}
+
+.i-icon p{
+	position: absolute;
+	text-align: center;
+	margin-bottom: 0px;
 }
 
 .content {
@@ -54,12 +84,13 @@ section {
 /*body text*/
 li {
 	font-family: Arial; 
-	font-size: 16px;
+	font-size: 14px;
 }
 
 p {
 	font-family: Arial; 
-	font-size: 16px;
+	font-size: 14px;
+	margin-bottom: 10px;
 }
 
 ul, ol {
