--- a/fashion-blog/css/fashion-blog.css
+++ b/fashion-blog/css/fashion-blog.css
@@ -55,8 +55,13 @@ main li {
 }
 
 .blog-content::first-letter{
-	font-size: 200%;
-    color: #8A2BE2;
+	font-size: 100px;
+	font-weight: lighter;
+    color: #D0D0D0;
+    float: left;
+    margin-right: 10px;
+   	margin-bottom: 10px;
+    line-height: 60px;
 }
 
 .display-more {
