--- a/fashion-blog/css/fashion-blog.css
+++ b/fashion-blog/css/fashion-blog.css
@@ -37,7 +37,10 @@ main li {
 	border-bottom: solid 1px #DFDFDF;
 }
 
-
+.navigation a{
+	text-decoration: none;
+	color: #DFDFDF;
+}
 
 .date {
 	color: #D0D0D0;
@@ -102,6 +105,11 @@ img {
 	color: #DE3B30;
 	padding-right: 5px;
 	border-right: solid 1px #DFDFDF;
+}
+
+.footer-navigation a {
+	text-decoration: none;
+	color: #DE3B30;
 }
 
 .footer-navigation li:last-child{
