--- a/fashion-blog-advanced/css/fashion-blog-advanced.css
+++ b/fashion-blog-advanced/css/fashion-blog-advanced.css
@@ -67,7 +67,7 @@ header {
 
 .site-container {
 	padding: 50px;
-	max-width: 800px;
+	max-width: 1000px;
 	margin: auto;
 }
 
@@ -205,7 +205,7 @@ img {
 }
 
 /*Mobile styles*/
-@media (max-width: 799px) {
+@media (max-width: 767px) {
 
 	
 	.title-section i{
@@ -222,6 +222,7 @@ img {
 
 	.sidebar {
 		margin-left: 0px;
+		margin-top: 10px;
 	}
 
 
