--- a/homework/cash-register/css/cash-register.css
+++ b/homework/cash-register/css/cash-register.css
@@ -15,7 +15,7 @@ body {
 
 /* Ticket */
 /* --------------------------------- */
-.ticket {
+.ticket, form {
 	font-family: monospace;
 	background: white;
 	margin: 0 20px;
@@ -68,4 +68,8 @@ form input {
 form input:focus {
 	outline: none;
 	border-color: rgba(255, 255, 255, 0.7);
+}
+
+button {
+	display: none;
 }
