--- a/homework/tasks/css/tasks.css
+++ b/homework/tasks/css/tasks.css
@@ -77,6 +77,7 @@ button{
 	margin-top: 5px;
 	height: 36px;
 	align-items: center;
+
 }
 
 .completed-task-entry li{
@@ -87,6 +88,13 @@ button{
 	text-decoration: line-through;
 }
 
+.completed-task-entry li:first-of-type + li + li{
+	color: #999;
+}
+
 .completed-task-entry input {
 	padding: 0px;
 }
+
+
+
