--- a/homework/tasks/css/tasks.css
+++ b/homework/tasks/css/tasks.css
@@ -97,4 +97,48 @@ button{
 }
 
 
+/*Mobile styles*/
+@media (max-width: 485px) {
 
+	.page-container {
+	font-family: arial;
+}
+
+	.title{
+		margin-top: 20px;
+		margin-bottom: 20px;
+		margin-left: 20px;
+		font-size: 36px;
+	}
+		
+	form {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+
+    }
+
+    .task-div{
+	display: flex;
+	flex-direction: column;
+	width: 90%;
+	margin-left: 20px;
+	}
+
+	.date-div{
+		display: flex;
+		width: 90%;
+		flex-direction: column;
+		margin-top: 20px;
+		margin-left: 20px;
+	}
+
+	button{
+		height: 36px;
+		padding: 10px;
+		width: 90%;
+		margin-top: 20px;
+		margin-left: 20px;
+	}
+
+}
